tests/baselines/reference/contextualTyping17.errors.txt
tests/cases/compiler/contextualTyping17.ts(1,33): error TS2322: Type '{ id: number; name: string; }' is not assignable to type '{ id: number; }'.
  Property 'name' does not exist on type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping17.ts (1 errors) ====
    var foo: {id:number;} = {id:4}; foo = {id: 5, name:"foo"};
                                    ~~~
!!! error TS2322: Type '{ id: number; name: string; }' is not assignable to type '{ id: number; }'.
!!! error TS2322:   Property 'name' does not exist on type '{ id: number; }'.